# emtypyie-cli

./: .gitignore  .npmignore  README.md  TODO.md  cli.js  emtypyie-cli-windows-x64-2.1.3.zip.sha256  package-lock.json  package.json
.github/workflows/: release.yml  winget-first-submit.yml
archive/v2.5.3/: .gitignore  startup_animation.json
archive/v2.5.3/Root4c/: CMakeLists.txt
archive/v2.5.3/Root4c/src/: animation.c  animation.h  bakafetch.c  bakafetch_data.h  download.c  fetch.c  fetch.h  larpino.h  main.c  project.c  runtime.c  shell.c  theme.h  util.c  util.h
archive/v2.5.3/Root4node/: LICENSE  cli.js  package.json
archive/v2.5.3/Root4node/commands/: auth.js  bakafetch.js  get.js  startup-animation.js
archive/v2.5.4/: .gitignore  startup_animation.json
archive/v2.5.4/Root4c/: CMakeLists.txt  README.md  gen_bakafetch.js
archive/v2.5.4/Root4c/src/: auth.c  auth.h  bakafetch.c  bakafetch.h  download.c  download.h  fetch.c  larpino.cpp  main.c  project.h  runtime.h  shell.c  theme.c
archive/v2.5.4/Root4node/: cli.js  package.json
archive/v2.5.4/Root4node/commands/: fetch.js  install-runtime.js  publish.js  theme.js
archive/v2.5.7/Root4c/src/: main.c  shell.c
archive/v2.5.8/Root4c/src/: shell.c
archive/v3.0.0/Root4gui/: LICENSE  forge.config.js  package-lock.json  package.json
archive/v3.0.0/Root4gui/src/engine/: engine.js
archive/v3.0.0/Root4gui/src/main/: main.js  (+1 more)
commands/: auth.js  bakafetch.js  fetch.js  get.js  help.js  publish.js  theme.js
gui/: index.html  server.js
mainsite/cli/: index.html
root4c/src/: bakafetch.c  theme.c
(+9 files in other folders)
